# wagtail-character-counter

./: MANIFEST.in  README.md  pyproject.toml
wagtail_character_counter/: wagtail_hooks.py
wagtail_character_counter/static/: character_counter.js
